0.533 2025-05-14
  [Fix Exception Messages]
    * Fix an exception message in Sys::IO::Stat#lstat method.
0.532 2025-01-29
  [Requirement Changes]
    * Require SPVM 0.990042.
  [Test Improvement]
    * Call Fn#destroy_runtime_permanent_vars method in the end of tests.
0.531 2025-01-20
  [Requirement Changes]
    * Require SPVM 0.990040.
0.530 2025-01-17
  [Bug Fix]
    * Fix bugs that the following classes are not compiled in compilation time.
    
      Sys::OS
      Sys::Env
      Sys::Select::Constant
      Sys::Poll::Constant
      Sys::IO::Stat
    * Fix a bug that Sys::Time#setitimer does not work well.
    
  [Exception Changes]
    * Sys::Process#waitpid method throws an exception if $wstatus_ref is not defined.
    * Sys::Process#wait method throws an exception if $wstatus_ref is not defined.
    * Sys::Time#localtime method throws an exception if $time_ref is not defined.
    * Sys::Time#gmtime method throws an exception if $time_ref is not defined.
    * Sys::Socket#accept method throws an exception if $addrlen_ref is not defined.
    * Sys::Socket#getsockname method throws an exception if $addrlen_ref is not defined.
    * Sys::Socket#getpeername method throws an exception if $addrlen_ref is not defined.
    * Sys::Socket#recvfrom method throws an exception if $addrlen_ref is not defined.
  [Changes]
    * Add version_from Sys to all classes except for Sys class.
    * Load Resource::SocketUtil.
0.529001 2025-01-05
  [Changes]
    * Sys#rand method calls Fn#rand method.
0.529 2025-01-05
  [Requirement Changes]
    * Require SPVM 0.990035.
  [New Features]
    * Add Sys#rand method.
    * Add Sys#srand method.
  [Changes]
    * $mode argument of Sys#mkdir method is optional.
    
0.528 2024-10-17
  [New Features]
    * Add Sys::Socket::Errno#is_read_again method.
    * Add Sys::Socket::Errno#is_write_again method.
    * Add Sys::Socket::Errno#is_connect_again method.
    * Add Sys::Socket::Errno#is_accept_again method.
    
  [Cleanup]