@@ -1,6 +1,8 @@
 0.533 2025-05-14
   [Fix Exception Messages]
     * Fix an exception message in Sys::IO::Stat#lstat method.
+  [New Features]
+    * Add Sys::IO::Windows#stat method.
 0.532 2025-01-29
   [Requirement Changes]
     * Require SPVM 0.990042.
